Post 엔티티 수정 및 관련 로직 수정